syntax = "proto3";
package GRPCServer;

service GRPCServer 
{
	rpc Register (User) returns (RegisterResult) {}
	rpc Login (User) returns (LoginResult) {}
	rpc Logout (EmptyRequest) returns (StringRespone) {}
	rpc HeartBeat (EmptyRequest) returns (StringRespone) {}

	rpc Share (ShareRequest) returns (StringRespone) {}
	rpc Create (PathRequest) returns (StringRespone) {}
	rpc Rename (RenameRequest) returns (StringRespone) {}
	rpc Delete (PathRequest) returns (StringRespone) {}

	rpc Upload (PathRequest) returns (StringRespone) {}
	rpc UploadBlock (BlockRequest) returns (StringRespone) {}

	rpc Download (PathRequest) returns (StringRespone) {}
	rpc DownloadBlock (BlockRequest) returns (StringRespone) {}

	rpc GetMetadata (PathRequest) returns (StringRespone) {}
	rpc ListFolder (PathRequest) returns (StringRespone) {}
	rpc GetToken (PathRequest) returns (StringRespone) {}
	rpc ReturnToken (PathRequest) returns (StringRespone) {}
	rpc CanModifyFolder (PathRequest) returns (StringRespone) {}
}

message User
{
	string Email = 1;
	string Password = 2;
	string FirstName = 3;
	string LastName = 4;
}

message RegisterResult
{
	bool Succeed = 1;
	string ErrorMessage = 2;
}

message LoginResult
{
	bool Succeed = 1;
	string SessionId = 2;
	string Email = 3;
	string Password = 4;
	string FirstName = 5;
	string LastName = 6;
	string ErrorMessage = 7;
}

message EmptyRequest
{
	string SessionId = 1;
}

message PathRequest
{
	string SessionId = 1;
	string Path = 2;
}

message RenameRequest
{
	string SessionId = 1;
	string Path = 2;
	string OldPath = 3;
}

message ShareRequest
{
	string SessionId = 1;
	string Path = 2;
	string Dst = 3;
}

message UploadRequest
{
	string SessionId = 1;
	string Path = 2;
	string BaseRev = 3;
}

message BlockRequest
{
	string SessionId = 1;
	string Path = 2;
	string BaseRev = 3;
	string Rev = 4;
	string BlockIndex = 5;
	string BlockHash = 6;
	string Content = 7;
}

message StringRespone
{
	string PayLoad = 1;
}